<?xml version="1.0"?>
<package format="2">
  <name>signage</name>
  <version>0.0.0</version>
  <description>The gms8 signage package</description>

<maintainer email="makoto.yabuta@tier4.jp">yabuta</maintainer>

<license>TODO</license>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>autoware_api_msgs</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>autoware_vehicle_msgs</exec_depend>
  <exec_depend>autoware_system_msgs</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qttools5-dev-tools</exec_depend>
  <exec_depend>python-qt5-bindings-quick</exec_depend>
  <exec_depend>qml-module-qtquick-controls</exec_depend>
  <exec_depend>qml-module-qtquick-controls2</exec_depend>
  <exec_depend>qml-module-qtmultimedia</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
