<?xml version="1.0"?>
<package format="2">
  <name>signage</name>
  <version>0.1.0</version>
  <description>The signage package</description>

  <maintainer email="makoto.yabuta@tier4.jp">yabuta</maintainer>

  <license>Apache License 2.0</license>
  <exec_depend>signage_version</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <depend>rclpy</depend>
  <depend>tier4_api_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_hmi_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
